--- a/index.html
+++ b/index.html
@@ -674,8 +674,9 @@
                     <p>
                         Copyright &copy; <span id="current-year">2024</span> Mingyuan Li
                     </p>
+                    <p>Last updated: 2024-12-21 UTC+8</p>
                     <p>                    
-                        Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio                        </a>.
+                        Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio</a>.
                     </p>
                 </div>
                 <div class="col-sm-2 top">
