--- a/index.html
+++ b/index.html
@@ -603,6 +603,34 @@
             </div></div>
             <img src="images\CPT204.jpg" style="max-width: 300px; max-height: 300px;"/>
         </div>
+
+        <div class="education-block" style="display: flex; align-items: center;">
+            <div><h3><strong>Big Data Analytics</strong> | Python</h3>
+            <h4>Individual Project</h4>
+            <div class="gpa">
+                <p>
+                    <li style="font-size: 15 px">
+                        Scraped 400 movie datasets from TMDB using BeautifulSoup. After literature reviews and idea exploration, performed exploratory data analysis with visualizations of post-Hollywood film attributes. Data cleaning and preprocessing led to eight visualizations addressing the research questions, followed by hypothesis validation using PLS-SEM.
+                    </li>
+                    <br>
+                    <li style="font-size: 15 px">
+                        Developed a Random Forest model with appropriate preprocessing for multi-class classification to predict student academic trajectory. The model outperformed others, achieving superior evaluation metrics and a competitive score in a Kaggle competition.
+                    </li>
+                </p>
+            </div></div>
+            <img src="images\INT303.png" style="max-width: 300px; max-height: 300px;"/>
+        </div>
+
+        <div class="education-block" style="display: flex; align-items: center;">
+            <div><h3><strong>Machine Learning</strong> | Python</h3>
+            <h4>Individual Project</h4>
+            <div class="gpa">
+                <p><li style="font-size: 15 px">
+                    Improved the GECCO architecture for handwritten digit recognition on the MNIST dataset by implementing three key modifications, enhancing model accuracy while reducing its size. The modified GECCO was compared with baseline models, including CNN, SpinalNet, ResNet, and Efficient-CapsNet. Results showed that the improved GECCO outperformed traditional CNN models, achieving higher accuracy, lower error rates, and a more compact parameter size.
+                </li></p>
+            </div></div>
+            <img src="images\INT305.jpg" style="max-width: 300px; max-height: 300px;"/>
+        </div>
     </div>
     <!-- End #education -->
 
@@ -674,7 +702,7 @@
                     <p>
                         Copyright &copy; <span id="current-year">2024</span> Mingyuan Li
                     </p>
-                    <p>Last updated: 2024-12-21 UTC+8</p>
+                    <p>Last updated: 2024-12-22 UTC+8</p>
                     <p>                    
                         Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio</a>.
                     </p>
