--- a/index.html
+++ b/index.html
@@ -255,8 +255,10 @@
             <h3 id="VisualCodeMOOC">VisualCodeMOOC: A Course Platform for Algorithms and Data Structures Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
             <h4><strong style="color: #333333;">Mingyuan Li</strong>; Duan Wang; Erick Purwanto; Thomas Selig; Qing Zhang; Hai-Ning Liang</h4>
             <div class="gpa">
-                <p><i>SoftwareX (IF: 2.8) </i>[Under Review: Submitted Nov. 2024]</p>
+                <p><i>SoftwareX (IF: 2.8) </i>[Accepted Jan. 2025]</p>
             </div>
+            <p><a href="" target="_blank">Access the full paper</a></p>
+            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Access the open source project</a></p>
         </div>
 
         <div class="education-block">
@@ -474,7 +476,7 @@
                             Reliable questionnaire results (Cronbach's alpha: 0.891) and a high average score of 4.18, supported by qualitative coding, demonstrate the bot met all evaluation criteria.
                         </li>
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;"> 
-                           Authered a manuscript based on the current findings, currently under review by <a href="#VisualCodeMOOC"><i>SoftwareX (IF: 2.8)</i></a>.
+                           Authered a manuscript based on the current findings, which get accepted and published in <a href="#VisualCodeMOOC"><i>SoftwareX (IF: 2.8)</i></a>.
                         </li>
                         <div class="container">
                             <div class="row">
@@ -702,7 +704,7 @@
                     <p>
                         Copyright &copy; <span id="current-year">2024</span> Mingyuan Li
                     </p>
-                    <p>Last updated: 2024-12-22 UTC+8</p>
+                    <p>Last updated: 2025-2-11 UTC+8</p>
                     <p>                    
                         Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio</a>.
                     </p>
