--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@
             <h3 id="VisualCodeMOOC">VisualCodeMOOC: A Course Platform for Algorithms and Data Structures Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
             <h4><strong style="color: #333333;">Mingyuan Li</strong>; Duan Wang; Erick Purwanto; Thomas Selig; Qing Zhang; Hai-Ning Liang</h4>
             <div class="gpa">
-                <p><i>SoftwareX (IF: 2.8) </i>[Accepted Jan. 2025]</p>
+                <p><i>SoftwareX (IF: 2.8) </i> [Accepted Jan. 2025]</p>
             </div>
-            <p><a href="" target="_blank">Access the full paper</a></p>
+            <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Access the full paper</a></p>
             <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Access the open source project</a></p>
         </div>
 
