--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <p><i>SoftwareX (IF: 2.8) </i> [Accepted Jan. 2025]</p>
             </div>
             <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Access the full paper</a></p>
-            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Access the open source project</a></p>
+            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Access the open source project repo </a></p>
         </div>
 
         <div class="education-block">
@@ -444,6 +444,12 @@
             <div data-date=" September/2023 - Present">
                 <h3> <strong> GenAI-Powered ChatBot in Programming and Algorithm Education</strong></h3>
                 <h4> Research Assistant (Team of Two)</h4>
+                <h4 style="font-size: 18px;"> <strong> 
+                    Initial Funding Source: <a href="https://scholar.xjtlu.edu.cn/en/projects/exploration-of-the-role-of-ai-based-chatbots-in-supporting-studen " title="Access the funding" target="_blank"> TDF: A Internal Research Project</a>
+                </strong></h4>
+                <h4 style="font-size: 18px;"> <strong> 
+                    Official Project & Funding Homepage: <a href="https://scholar.xjtlu.edu.cn/en/projects/advance-he-global-impact-grant-2023-2024" title="Access the funding" target="_blank"> Advance HE Global Impact Grant</a>
+                </strong></h4>
                 <p>
                     Supervisor: 
                     <p><a href="https://scholar.xjtlu.edu.cn/en/persons/ErickPurwanto" title="Access the detailed profile" target="_blank"> Erick Purwanto</a></p>
@@ -704,7 +710,7 @@
                     <p>
                         Copyright &copy; <span id="current-year">2024</span> Mingyuan Li
                     </p>
-                    <p>Last updated: 2025-2-11 UTC+8</p>
+                    <p>Last updated: 2025-2-13 UTC+8</p>
                     <p>                    
                         Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio</a>.
                     </p>
