--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
             </div>
             <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Access the full paper</a></p>
             <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Access the open source project repo </a></p>
+            <p><a href="https://drive.google.com/file/d/1FPS0AhZwTjAZoZy-HqODWYlddN_Osdre/view?usp=sharing" target="_blank">Demo</a></p>
         </div>
 
         <div class="education-block">
