--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
             <h3 id="VisualCodeMOOC">VisualCodeMOOC: A Course Platform for Algorithms and Data Structures Integrating a Conversational Agent for Enhanced Learning Through Dynamic Visualizations</h3>
             <h4><strong style="color: #333333;">Mingyuan Li</strong>; Duan Wang; Erick Purwanto; Thomas Selig; Qing Zhang; Hai-Ning Liang</h4>
             <div class="gpa">
-                <p><i>SoftwareX (IF: 2.8) </i> [Accepted Jan. 2025]</p>
+                <p><i>SoftwareX (IF: 2.4) </i> [Accepted Jan. 2025]</p>
             </div>
-            <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Access the full paper</a></p>
-            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Access the open source project repo </a></p>
+            <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Full Paper</a></p>
+            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Open Source Repository </a></p>
             <p><a href="https://drive.google.com/file/d/1FPS0AhZwTjAZoZy-HqODWYlddN_Osdre/view?usp=sharing" target="_blank">Demo</a></p>
         </div>
 
@@ -268,7 +268,7 @@
             <div class="gpa">
                 <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
             </div>
-            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Access the full paper</a></p>
+            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Full Paper</a></p>
         </div>
 
         <div class="education-block">
@@ -279,7 +279,7 @@
                 <p><i>The 15th International Conference on Cyber-Enabled Distributed Computing and Knowledge
                     Discovery, 2023</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Access the full paper</a></p>
+            <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Full Paper</a></p>
         </div>
 
         <div class="education-block">
@@ -289,7 +289,7 @@
             <div class="gpa">
                 <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Access the full paper</a></p>
+            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Full Paper</a></p>
         </div>
     </div>
     <!-- End #education -->
@@ -711,7 +711,7 @@
                     <p>
                         Copyright &copy; <span id="current-year">2024</span> Mingyuan Li
                     </p>
-                    <p>Last updated: 2025-2-13 UTC+8</p>
+                    <p>Last updated: 2025-3-12 UTC+8</p>
                     <p>                    
                         Acknowledgments: This project is inspired by and builds upon the work of <a href="https://github.com/RyanFitzgerald/devportfolio" target="_blank">devportfolio</a>.
                     </p>
