--- a/index.html
+++ b/index.html
@@ -444,10 +444,8 @@
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">
                             Utilized UNet-EfficientNet in Stage 1 for precise CT image segmentation, attaining an accuracy of 99.91%. Applied CrackNet-LSTM in Stage 2 for accurate cervical spine fracture detection, achieving an accuracy of 94.9%.
                         </li>
-                        <div class="container">
-                            <div class="row">
-                                <img src="images\PlantC_outcome.jpg" style="max-width: 300px; max-height: 300px;"/>
-                            </div>
+                        <div class="research-image-group">
+                            <img src="images\PlantC_outcome.jpg" class="research-image-item zoom-image" alt="Cervical spine fracture detection outcome figure">
                         </div>
                     </ul>
                     <!-- <p><strong>At the HubMAP Competition, use YOLOv8 for human blood vessel segmentation and make pseudo labels for retraining. Trying to combine SAM with YOLOv8 for segmentation.</strong></p> -->
@@ -462,10 +460,8 @@
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">
                             Improved mAP (1.2%-1.7%) and AUC (4.1%-5.2%) on two datasets (ChestDR, and Endo), compared to the baseline.
                         </li>
-                        <div class="container">
-                            <div class="row">
-                                <img src="images\CyberC_outcome1.jpg" style="max-width: 300px; max-height: 300px;"/>
-                            </div>
+                        <div class="research-image-group">
+                            <img src="images\CyberC_outcome1.jpg" class="research-image-item zoom-image" alt="Few-shot multi-label medical image classification outcome figure">
                         </div>
                     </ul>
                 </ol>
@@ -514,10 +510,8 @@
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;"> 
                            Authered a manuscript based on the current findings, which get accepted and published in <a href="#VisualCodeMOOC"><i>SoftwareX</i></a>.
                         </li>
-                        <div class="container">
-                            <div class="row">
-                                <img src="images\Chatbot_outcome3.png" style="max-width: 400px; max-height: 400px;"/>
-                            </div>
+                        <div class="research-image-group">
+                            <img src="images\Chatbot_outcome3.png" class="research-image-item zoom-image" alt="GenAI-powered chatbot visualization outcomes">
                         </div>
                     </ul>
                     <strong>Phase Three: Researched the effectiveness and HCI criterias of our design compared to standard GPT in teaching graph algorithms.
@@ -529,11 +523,9 @@
                             with two groups: our bot vs. a original GPT-based AI tool.  </li>
                         <li style="font-size: 15.5px; text-align: justify; font-family: 'Arial', sans-serif;">Ours outperforms ChatGPT across all dimensions, with T-test p-values below 0.05, confirming statistically significant improvements in usability, effectiveness, and engagement. 
                             The project was showcased at EdVenture and internal sharing seminars.</li>
-                            <div class="container">
-                                <div class="row">
-                                    <img src="images\Chatbot_outcome1.jpg" style="max-width: 400px; max-height: 400px;"/>
-                                </div>
-                            </div>
+                        <div class="research-image-group">
+                            <img src="images\Chatbot_outcome1.jpg" class="research-image-item zoom-image" alt="Graph algorithm chatbot experiment outcomes">
+                        </div>
                                             
                     </ul>
                 </ol>
