--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
                 </div>
                 <div class="col-md-8">
                     <p style="font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif; color: #333333;">
-                        <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
+                        <!-- <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
                             霆霓快雨 
                         </span>
                         describes the scene of a summer thunderstorm followed by <span class="custom-font-SmileySansOblique" style="color: #9400D3;">immediate</span> clear skies, which also can be referred to as 
                         <span class="custom-font-SmileySansOblique" style="color: #9400D3;">
                             Nimble as Lightning
-                        </span>.
-                        This term accurately summarizes my undergraduate research: <br> 
+                        </span>. -->
+                        This term <span class="custom-font-SmileySansOblique" style="color: #9400D3;">Nimble as Lightning</span> accurately summarizes my undergraduate research: <br> 
                         <p style="margin-left: 2em;font-size: 17.5px; text-align: justify; font-family: 'Arial', sans-serif; color: #333333;">
                         <strong>1) </strong>reproduced a fracture detection model within <span class="custom-font-SmileySansOblique" style="color: #9400D3;">two weeks</span>; 
                         <strong>2) </strong>identified research gaps in few-shot classification, building, experimenting, writing, and publishing 
@@ -246,7 +246,7 @@
             </ul>
             <div class="gpa">
                 <p><strong>WES GPA:</strong> 3.82/4.0 &nbsp;&nbsp; 
-                    <strong><a href="files/Mingyuan Li-Transcript-WES.pdf" target="_blank">Check the WES unofficial transcript</a></strong>
+                    <strong><a href="files/Mingyuan Li-Transcript-WES.pdf" target="_blank">The WES unofficial transcript</a></strong>
                 </p> 
                 
                 <p><strong>Major GPA:</strong> 3.87/4.0</p>
@@ -257,7 +257,7 @@
                 <br>
                 <!-- <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
                 <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript"> -->
-                <strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">Check the full official transcript, qualification and marking criteria</a></strong>
+                <strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">The full official transcript, qualification and marking criteria</a></strong>
             </div>
             <!-- <div class="achievements">
                 <p><strong>Note: </strong>  </strong> XJTLU follows the British Marking Criteria:  </p>
