--- a/index.html
+++ b/index.html
@@ -251,13 +251,18 @@
                 
                 <p><strong>Major GPA:</strong> 3.87/4.0</p>
                 <p> Ranked in the top 1.97% in Java Programming.</p>
-                <p> Ranked approximately in the top 9% in Operating Systems Concepts.</p>
+                <!-- <p> Ranked approximately in the top 9% in Operating Systems Concepts.</p> -->
                 <p> Ranked approximately in the top 5% in Advanced OO Programming.</p>
 
                 <br>
                 <!-- <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
                 <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript"> -->
                 <strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">The full official transcript, qualification and marking criteria</a></strong>
+
+                <div class="credly-badge-container">
+                    <div data-iframe-width="120" data-iframe-height="150" data-share-badge-id="d24266df-e78e-423f-96fb-028868eb1200" data-share-badge-host="https://www.credly.com"></div>
+                    <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+                </div>
             </div>
             <!-- <div class="achievements">
                 <p><strong>Note: </strong>  </strong> XJTLU follows the British Marking Criteria:  </p>
