--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <br>
                 <!-- <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
                 <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript"> -->
-                <strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">The full official transcript, qualification and marking criteria</a></strong>
+                <strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">Official transcript, qualification and marking criteria</a></strong>
 
                 <div class="credly-badge-container">
                     <div data-iframe-width="120" data-iframe-height="150" data-share-badge-id="d24266df-e78e-423f-96fb-028868eb1200" data-share-badge-host="https://www.credly.com"></div>
@@ -291,8 +291,8 @@
             <div class="gpa">
                 <p><i>SoftwareX, vol. 30, p. 102072, May 2025</i> (IF: 2.4)</p>
             </div>
-            <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Full Paper</a></p>
-            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Open Source Repository </a></p>
+            <p><a href="https://www.sciencedirect.com/science/article/pii/S2352711025000391" target="_blank">Paper</a></p>
+            <p><a href="https://github.com/ElsevierSoftwareX/SOFTX-D-24-00589" target="_blank">Repository </a></p>
             <p><a href="https://drive.google.com/file/d/1FPS0AhZwTjAZoZy-HqODWYlddN_Osdre/view?usp=sharing" target="_blank">Demo</a></p>
         </div>
 
@@ -302,7 +302,7 @@
             <div class="gpa">
                 <p><i>Global Impact Grants 2024 - Education for Sustainable Development and Building Future Leaders</i></p>
             </div>
-            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Full Paper</a></p>
+            <p><a href="https://www.advance-he.ac.uk/knowledge-hub/global-impact-grants-2024-education-sustainable-development-and-building-future" target="_blank">Paper</a></p>
         </div>
 
         <div class="education-block">
@@ -313,7 +313,7 @@
                 <p><i>The 15th International Conference on Cyber-Enabled Distributed Computing and Knowledge
                     Discovery, 2023</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Full Paper</a></p>
+            <p><a href="https://doi.org/10.1109/CyberC58899.2023.00024" target="_blank">Paper</a></p>
         </div>
 
         <div class="education-block">
@@ -323,7 +323,7 @@
             <div class="gpa">
                 <p><i>International Conference on Platform Technology and Service (PlatCon), 2023</i></p>
             </div>
-            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Full Paper</a></p>
+            <p><a href="https://doi.org/10.1109/PlatCon60102.2023.10255157" target="_blank">Paper</a></p>
         </div>
     </div>
     <!-- End #education -->
