--- a/index.html
+++ b/index.html
@@ -308,7 +308,17 @@
         <div class="education-block">
             <h3>University of Pennsylvania</h3>
             <span class="education-date">August/2025 - Now</span>
-            <h4>Master of Science in Engineering (MSE), Systems Engineering</h4>
+            <h4>Master of Science in Engineering (MSE), Data Science</h4>
+            <ul class="course-list">
+                <li><strong>Big Data Analytics</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;</span></li>
+                <li><strong>Linear Systems Theory</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;</span></li>
+                <li><strong>Statistics for Data Science</strong><span class="course-grade">A &nbsp;&nbsp;&nbsp;&nbsp;</span></li>
+            </ul>
+            <div class="gpa">
+                <p>
+                    <strong>Current GPA:</strong> 4.0/4.0
+                </p>
+            </div>
         </div>
         <!-- End .education-block -->
 
@@ -377,11 +387,11 @@
                 <!-- <p> Ranked approximately in the top 9% in Operating Systems Concepts.</p> -->
                 <p> Ranked approximately in the top 5% in Advanced OO Programming.</p>
 
-                <br>
+                <!-- <br> -->
                 <!-- <p><strong><a href="#" id="transcriptLink">Check the full official transcript and marking criteria</a></strong></p>
                 <img id="transcriptImage" src="images\xjtlu_Transcript.png" alt="Full Official Transcript"> -->
-                <strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">Official transcript, qualification
-                        and marking criteria</a></strong>
+                <p><strong><a href="files/Mingyuan Li-Transcript.pdf" target="_blank">Official transcript, qualification
+                        and marking criteria</a></strong></p>
 
                 <div class="credly-badge-container">
                     <div data-iframe-width="120" data-iframe-height="150"
